Finished the aouth part
